# imgcapt

./: .gitignore  LICENSE  README.md  batch_recaption.py  pyproject.toml  sample.env
backend/: __init__.py  main.py  sse_manager.py
data/: .gitkeep
data/raw/: .gitkeep
frontend/: app.js  index.html  style.css
frontend/fonts/: .gitkeep
frontend/scripts/: image-editor.js  sse-client.js
